--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="widget">
         <div class="chat_header">
           <!--Add the name of the bot here -->
-          <span class="chat_header_title">Cars</span>
+          <span class="chat_header_title">Nature</span>
           <span class="dropdown-trigger" href="#" data-target="dropdown1">
             <i class="material-icons"> more_vert </i>
           </span>
